--- a/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
+++ b/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T19:37:16.068384Z",
-     "start_time": "2024-06-22T19:37:16.065956Z"
+     "end_time": "2024-06-22T22:54:57.422661Z",
+     "start_time": "2024-06-22T22:54:57.419914Z"
     }
    },
    "cell_type": "code",
@@ -29,7 +29,7 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -40,20 +40,20 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-22T19:37:16.562166Z",
-     "start_time": "2024-06-22T19:37:16.205623Z"
+     "end_time": "2024-06-22T22:55:49.508859Z",
+     "start_time": "2024-06-22T22:55:49.211469Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Read CSV file\n",
-    "loyalty = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights (original)/Customer Loyalty History.csv')\n",
+    "loyalty = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Loyalty History.csv')\n",
     "\n",
-    "activity = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights (original)/Customer Flight Activity.csv')"
+    "activity = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Flight Activity.csv')"
    ],
    "id": "7dfa7f4d24d667d2",
    "outputs": [],
-   "execution_count": 51
+   "execution_count": 3
   },
   {
    "metadata": {},
