--- a/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
+++ b/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
@@ -952,7 +952,7 @@
     "# Original row amount: 16737\n",
     "\n",
     "# Drop duplicates\n",
-    "loyalty = loyalty.drop_duplicates()\n",
+    "loyalty.drop_duplicates(inplace=True)\n",
     "loyalty.shape"
    ],
    "id": "5e0eb8b6a046d6bb"
@@ -1420,7 +1420,7 @@
     "# Original row amount: 405624\n",
     "\n",
     "# Drop duplicates\n",
-    "activity = activity.drop_duplicates()\n",
+    "activity.drop_duplicates(inplace=True)\n",
     "activity.shape"
    ],
    "id": "1ad940ad07eec0e4",
@@ -1753,17 +1753,10 @@
    "id": "821ff498a495ee17"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-22T19:37:17.415553Z",
-     "start_time": "2024-06-22T19:37:17.412172Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "# The promotion occurred during the year of 2018.",
-   "id": "f6d46d7b30ccd404",
-   "outputs": [],
-   "execution_count": 74
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The promotion occurred during the year of 2018.",
+   "id": "cfc4f4de43882d54"
   },
   {
    "metadata": {
@@ -1797,17 +1790,10 @@
    "execution_count": 75
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-22T19:37:17.428072Z",
-     "start_time": "2024-06-22T19:37:17.425896Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "# The promotion lasted from February to April",
-   "id": "3cd0ede1a158c28a",
-   "outputs": [],
-   "execution_count": 76
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The promotion lasted from February to April",
+   "id": "60d7e06a9ebf2bdc"
   },
   {
    "metadata": {},
@@ -1915,8 +1901,8 @@
    "cell_type": "code",
    "source": [
     "# Export Datasets to CSV\n",
-    "loyalty.to_csv('customer_loyalty_history (cleaned).csv', index = False)\n",
-    "activity.to_csv('customer_flight_activity (cleaned).csv', index = False)"
+    "loyalty.to_csv('customer_loyalty_history (cleaned).csv', index=False)\n",
+    "activity.to_csv('customer_flight_activity (cleaned).csv', index=False)"
    ],
    "id": "90c34b042ef2ea44",
    "outputs": [],
