--- a/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
+++ b/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
@@ -1155,7 +1155,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Convert cancellation_year and cancellation_month to Int64\n",
+    "# Convert cancellation_year and cancellation_month to object (string)\n",
     "loyalty['cancellation_year'] = loyalty['cancellation_year'].astype(str)\n",
     "loyalty['cancellation_month'] = loyalty['cancellation_month'].astype(str)\n",
     "loyalty[['cancellation_year', 'cancellation_month']].dtypes"
@@ -1312,7 +1312,7 @@
    },
    "cell_type": "code",
    "source": [
-    "# Convert 'nan' to Object NULL value None\n",
+    "# Convert 'nan' to object NULL value None\n",
     "loyalty['cancellation_year'] = loyalty['cancellation_year'].apply(lambda x: None if x == 'nan' else x)\n",
     "loyalty['cancellation_month'] = loyalty['cancellation_month'].apply(lambda x: None if x == 'nan' else x)\n",
     "loyalty[['cancellation_year', 'cancellation_month']]"
