--- a/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
+++ b/Data Cleaning & Exploration - Airline Loyalty Campaign Program Impact on Flights.ipynb
@@ -47,9 +47,9 @@
    "cell_type": "code",
    "source": [
     "# Read CSV file\n",
-    "loyalty = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Loyalty History.csv')\n",
+    "loyalty = pd.read_csv('/Users/raheem-gsu/Documents/Github Portfolio Projects/Customer-Loyalty-Program-Analysis/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Loyalty History.csv')\n",
     "\n",
-    "activity = pd.read_csv('/Users/raheem-gsu/DataGripProjects/MYSQL-Tableau-Customer-Flights-Project/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Flight Activity.csv')"
+    "activity = pd.read_csv('/Users/raheem-gsu/Documents/Github Portfolio Projects/Customer-Loyalty-Program-Analysis/Datasets/Airline Loyalty Campaign Program Impact on Flights/Customer Flight Activity.csv')"
    ],
    "id": "7dfa7f4d24d667d2",
    "outputs": [],
